<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding20"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/padding20">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/TitleNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_tarea" />

                <EditText
                    android:id="@+id/etDescripcionTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="@dimen/padding20">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TitleNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion_tarea" />

                <EditText
                    android:id="@+id/etDuracionTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="@dimen/padding20"
                android:weightSum="2">

                <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
                    android:id="@+id/searchMultiSpinnerUnlimited"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:hintText="@string/usuarios" />

                <Button
                    android:id="@+id/btnOkAddTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin10"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="@dimen/margin10"/>

</LinearLayout>